--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,9 @@
                 <ImageView
                     android:id="@+id/img_baner"
                     android:layout_width="match_parent"
-                    android:layout_height="250dp" />
+                    android:layout_height="250dp"
+                    android:background="@color/colorWhite"
+                    app:srcCompat="@drawable/ico_small" />
 
                 <ImageView
                     android:layout_width="wrap_content"
