--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -13,7 +13,7 @@
         <!-- Первый элемент -->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="1dp"
             android:layout_weight="1"
             android:background="@color/colorWhite"
@@ -26,21 +26,21 @@
                 android:layout_height="40dp"
                 android:gravity="center_vertical"
                 android:text="Название"
-                android:textSize="16sp"
-                android:textColor="@color/colorBlack" />
+                android:textColor="@color/colorBlack"
+                android:textSize="16sp" />
 
             <ImageView
                 android:id="@+id/item_image"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
+                android:layout_height="200dp"
+                android:padding="5dp"
                 android:scaleType="fitCenter"
-                app:srcCompat="@drawable/ico" />
+                app:srcCompat="@drawable/ico_small" />
         </LinearLayout>
         <!-- Второй элемент -->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="1dp"
             android:layout_weight="1"
             android:background="@color/colorWhite"
@@ -52,17 +52,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:gravity="center_vertical"
-                android:textSize="16sp"
                 android:text="Название"
-                android:textColor="@color/colorBlack" />
+                android:textColor="@color/colorBlack"
+                android:textSize="16sp" />
 
             <ImageView
                 android:id="@+id/item1_image"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
+                android:layout_height="200dp"
+                android:padding="5dp"
                 android:scaleType="fitCenter"
-                app:srcCompat="@drawable/ico" />
+                app:srcCompat="@drawable/ico_small" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
