--- a/app/src/main/res/layout/dialog_basket.xml
+++ b/app/src/main/res/layout/dialog_basket.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:background="@drawable/border_text"
+        android:background="@drawable/border_text_black"
         android:text="Продолжить покупки"/>
     <Button
         android:id="@+id/btn_basket"
