--- a/app/src/main/res/layout/item_characteristics.xml
+++ b/app/src/main/res/layout/item_characteristics.xml
@@ -6,24 +6,38 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/txt_name_characteristics"
-            android:layout_width="230dp"
-            android:layout_height="wrap_content"
-            android:text="Название"
-            android:textColor="@color/colorGrayDark"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/txt_characteristics"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Характеристика"
-            android:textColor="@color/colorBlack"
-            android:textSize="14sp" />
+            android:layout_margin="2dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txt_name_characteristics"
+                android:layout_width="230dp"
+                android:layout_height="wrap_content"
+                android:text="Название"
+                android:textColor="@color/colorGrayDark"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/txt_characteristics"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Характеристика"
+                android:textColor="@color/colorBlack"
+                android:textSize="14sp" />
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorGray"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="2dp"/>
     </LinearLayout>
 
 </LinearLayout>
