--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/txt_name"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:gravity="center_vertical"
+                android:gravity="start"
                 android:maxLines="2"
                 android:text="Мини АЗС Piusi ST Panther 56 K33"
                 android:textColor="@color/colorBlack"
@@ -33,9 +33,8 @@
                 android:id="@+id/img_item"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:adjustViewBounds="true"
                 android:scaleType="fitCenter"
-                app:srcCompat="@drawable/ico" />
+                android:padding="5dp" />
             <!-- Стоимость -->
             <LinearLayout
                 android:layout_width="match_parent"
@@ -80,7 +79,7 @@
                     android:textColor="@color/colorGreen" />
             </RelativeLayout>
         </LinearLayout>
-        <!-- ВТорой элемент -->
+        <!-- Второй элемент -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -89,23 +88,22 @@
             android:background="@color/colorWhite"
             android:orientation="vertical"
             android:padding="5dp">
-
+            <!-- Нвазние товара -->
             <TextView
                 android:id="@+id/txt1_name"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:gravity="center_vertical"
+                android:gravity="start"
                 android:text="Мини АЗС Piusi ST Panther 56 K33"
                 android:textColor="@color/colorBlack"
                 android:textSize="16sp" />
-
+            <!-- Изображение товара -->
             <ImageView
                 android:id="@+id/img1_item"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:adjustViewBounds="true"
                 android:scaleType="fitCenter"
-                app:srcCompat="@drawable/ico" />
+                android:padding="5dp" />
             <!-- Стоимость -->
             <LinearLayout
                 android:layout_width="match_parent"
@@ -120,7 +118,7 @@
                     android:text="38 500 ₽"
                     android:textColor="@color/colorBlack"
                     android:textSize="16sp" />
-
+                <!-- Приобрести товар -->
                 <Button
                     android:id="@+id/btn1_by"
                     android:layout_width="100dp"
