--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
                 android:paddingBottom="5dp">
 
                 <TextView
+                    android:id="@+id/txt_tell"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -47,6 +48,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Обратный звонок"
+                    android:id="@+id/txt_callBack"
                     android:textColor="@color/colorGreen"
                     android:textSize="16sp" />
             </LinearLayout>
@@ -108,6 +110,7 @@
             </LinearLayout>
             <!-- Хит продаж -->
             <LinearLayout
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
