--- a/app/src/main/res/layout/item_basket.xml
+++ b/app/src/main/res/layout/item_basket.xml
@@ -20,12 +20,14 @@
                 android:layout_height="wrap_content">
                 <!-- Изображение товара -->
                 <ImageView
+                    android:id="@+id/image"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:padding="5dp"
                     app:srcCompat="@drawable/ico" />
                 <!-- Название товара -->
                 <TextView
+                    android:id="@+id/txt_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
@@ -40,6 +42,7 @@
                 android:orientation="horizontal">
                 <!-- Цена товара -->
                 <TextView
+                    android:id="@+id/txt_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
@@ -51,8 +54,9 @@
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="5dp"
                     android:gravity="right">
-                    <!-- + -->
+                    <!-- - -->
                     <TextView
+                        android:id="@+id/txt_minus"
                         android:background="@drawable/border_gray_light"
                         android:layout_width="20dp"
                         android:gravity="center"
@@ -61,14 +65,16 @@
                         android:textSize="20sp"
                         android:text="-" />
                     <TextView
+                        android:id="@+id/txt_quantity"
                         android:background="@drawable/border_gray_light"
                         android:layout_width="80dp"
                         android:gravity="center"
                         android:layout_height="wrap_content"
                         android:textSize="20sp"
                         android:text="1" />
-                    <!-- - -->
+                    <!-- + -->
                     <TextView
+                        android:id="@+id/txt_plus"
                         android:background="@drawable/border_gray_light"
                         android:layout_width="20dp"
                         android:gravity="center"
@@ -86,6 +92,7 @@
             android:background="@color/colorGray" />
         <!-- Общая стоимость -->
         <TextView
+            android:id="@+id/txt_sumPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="right"
