--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -26,6 +26,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:visibility="gone"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:adjustViewBounds="true"
@@ -73,6 +74,7 @@
                 android:background="@color/colorGray" />
 
             <ImageView
+                android:visibility="gone"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:adjustViewBounds="true"
